update portfolio: completly renewed design with some improvements

--- a/index.html
+++ b/index.html
@@ -1,58 +1,157 @@
 <!doctype html>
-<html lang="es">
+<html lang="es-ES">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ingeniero | IoT, Inteligencia Artificial y Blockchain | Zaragoza</title>
-    <meta name="description" content="Ingeniero especializado en Industria 4.0, IoT, Inteligencia Artificial y Blockchain en Zaragoza. Desarrollo soluciones innovadoras, seguras y escalables." />
-    <meta name="keywords" content="Industria 4.0, Sensores IoT, Inteligencia Artificial, Modelos IA, Blockchain, Zaragoza, Programador IA, Web3, Smart Contracts" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- 🖼 Open Graph -->
-    <meta property="og:title" content="Ingeniero | IoT, Inteligencia Artificial y Blockchain | Zaragoza" />
-    <meta property="og:description" content="Ingeniero especializado en Industria 4.0, IoT, Inteligencia Artificial y Blockchain en Zaragoza. Desarrollo soluciones innovadoras, seguras y escalables." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.xavierberga.com/" />
-    <meta property="og:image" content="https://www.xavierberga.com/logo.ico" />
+    <!-- Indexación -->
+    <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+    <meta name="googlebot" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+    <meta name="referrer" content="strict-origin-when-cross-origin" />
+    <meta name="format-detection" content="telephone=yes" />
+    <meta name="theme-color" content="#0b1220" />
 
-    <!-- 🐦 Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Ingeniero | IoT, Inteligencia Artificial y Blockchain | Zaragoza" />
-    <meta name="twitter:description" content="Ingeniero especializado en Industria 4.0, IoT, Inteligencia Artificial y Blockchain en Zaragoza. Desarrollo soluciones innovadoras, seguras y escalables." />
-    <meta name="twitter:image" content="https://www.xavierberga.com/logo.ico" />
-
-    <!-- 🌍 Canonical -->
+    <!-- Canonical -->
     <link rel="canonical" href="https://www.xavierberga.com/" />
+    <link rel="icon" href="https://www.xavierberga.com/logo.ico" />
 
-    <!-- 📌 Favicon -->
-    <link rel="icon" type="image/png" href="/public/logo.ico" />
+    <!-- Title + Description -->
+    <title>Ingeniero IA e IoT en Zaragoza, Barcelona y Lleida | Xavier Berga</title>
+    <meta
+      name="description"
+      content="Ingeniero especializado en Inteligencia Artificial (LLMs, visión, automatización), IoT industrial e Industria 4.0. Proyectos en Zaragoza, Barcelona y Lleida: diseño, desarrollo, despliegue y seguridad."
+    />
 
-    <!-- 📊 Structured Data (JSON-LD para persona) -->
+    <!-- Keywords -->
+    <meta
+      name="keywords"
+      content="inteligencia artificial Zaragoza, IoT Zaragoza, ingeniero IA Zaragoza, consultor IA Barcelona, IoT Barcelona, inteligencia artificial Lleida, IoT Lleida, Industria 4.0, edge computing, sensores IoT, machine learning, LLM, visión artificial, automatización, ciberseguridad IoT, blockchain, smart contracts"
+    />
+    <meta name="author" content="Xavier Berga" />
+
+    <!-- Hreflang -->
+    <link rel="alternate" hreflang="es-ES" href="https://www.xavierberga.com/" />
+    <link rel="alternate" hreflang="x-default" href="https://www.xavierberga.com/" />
+
+    <!-- Open Graph -->
+    <meta property="og:locale" content="es_ES" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Xavier Berga" />
+    <meta property="og:title" content="Ingeniero IA e IoT en Zaragoza, Barcelona y Lleida | Xavier Berga" />
+    <meta property="og:description" content="Soluciones de IA e IoT industrial para empresas: analítica, automatización, edge, sensores y seguridad. Servicio en Zaragoza, Barcelona y Lleida." />
+    <meta property="og:url" content="https://www.xavierberga.com/" />
+    <meta property="og:image" content="https://www.xavierberga.com/og-image.png" />
+    <meta property="og:image:alt" content="Xavier Berga - Ingeniero IA e IoT en Zaragoza, Barcelona y Lleida" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Ingeniero IA e IoT en Zaragoza, Barcelona y Lleida | Xavier Berga" />
+    <meta name="twitter:description" content="IA (LLMs, visión, automatización) + IoT industrial + Industria 4.0. Proyectos en Zaragoza, Barcelona y Lleida." />
+    <meta name="twitter:image" content="https://www.xavierberga.com/og-image.png" />
+
+    <!-- Datos estructurados -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "LocalBusiness",
-      "name": "Xavier Berga",
-      "image": "https://www.xavierberga.com/logo.ico",
-      "@id": "https://www.xavierberga.com",
-      "url": "https://www.xavierberga.com",
-      "telephone": "+34644369266",
-      "jobTitle": "Ingeniero en IoT, Inteligencia Artificial y Blockchain",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Calle Miguel Servet 34"
-        "addressLocality": "Zaragoza",
-        "addressCountry": "España"
-      },
-      "sameAs": [
-        "https://www.linkedin.com/in/xavierberga",
-        "https://github.com/rootkit0",
-        "https://twitter.com/SecuredMargin"
-      ],
-      "description": "Ingeniero especializado en Industria 4.0, IoT, Inteligencia Artificial y Blockchain en Zaragoza. Desarrollo soluciones innovadoras, seguras y escalables."
-    }
+      {
+        "@context": "https://schema.org",
+        "@graph": [
+          {
+            "@type": "WebSite",
+            "@id": "https://www.xavierberga.com/#website",
+            "url": "https://www.xavierberga.com/",
+            "name": "Xavier Berga",
+            "inLanguage": "es-ES",
+            "publisher": { "@id": "https://www.xavierberga.com/#person" }
+          },
+          {
+            "@type": "Person",
+            "@id": "https://www.xavierberga.com/#person",
+            "name": "Xavier Berga",
+            "url": "https://www.xavierberga.com/",
+            "image": "https://www.xavierberga.com/logo.ico",
+            "jobTitle": "Ingeniero en IoT e Inteligencia Artificial",
+            "telephone": "+34644369266",
+            "sameAs": [
+              "https://www.linkedin.com/in/xavierberga",
+              "https://github.com/rootkit0",
+              "https://twitter.com/SecuredMargin"
+            ],
+            "knowsAbout": [
+              "Inteligencia Artificial",
+              "Machine Learning",
+              "LLM",
+              "Visión Artificial",
+              "IoT",
+              "Industria 4.0",
+              "Edge Computing",
+              "Ciberseguridad IoT",
+              "Blockchain",
+              "Smart Contracts"
+            ]
+          },
+          {
+            "@type": "ProfessionalService",
+            "@id": "https://www.xavierberga.com/#service",
+            "name": "Servicios de IA e IoT - Xavier Berga",
+            "url": "https://www.xavierberga.com/",
+            "image": "https://www.xavierberga.com/logo.ico",
+            "description": "Ingeniería y consultoría en Inteligencia Artificial e IoT industrial: diseño, desarrollo, despliegue, integración y seguridad.",
+            "telephone": "+34644369266",
+            "provider": { "@id": "https://www.xavierberga.com/#person" },
+            "areaServed": [
+              { "@type": "City", "name": "Zaragoza" },
+              { "@type": "City", "name": "Barcelona" },
+              { "@type": "City", "name": "Lleida" }
+            ],
+            "address": {
+              "@type": "PostalAddress",
+              "streetAddress": "Calle Miguel Servet 34",
+              "addressLocality": "Zaragoza",
+              "addressRegion": "Aragón",
+              "postalCode": "50013",
+              "addressCountry": "ES"
+            },
+            "contactPoint": [
+              {
+                "@type": "ContactPoint",
+                "telephone": "+34644369266",
+                "contactType": "sales",
+                "areaServed": "ES",
+                "availableLanguage": ["es", "en"]
+              }
+            ],
+            "serviceType": [
+              "Consultoría en Inteligencia Artificial",
+              "Desarrollo de IA (LLM, visión, automatización)",
+              "IoT Industrial y Edge Computing",
+              "Integración Industria 4.0",
+              "Ciberseguridad IoT"
+            ]
+          }
+        ]
+      }
     </script>
   </head>
+
   <body>
+    <noscript>
+      <header>
+        <h1>Ingeniero de Inteligencia Artificial e IoT en Zaragoza, Barcelona y Lleida</h1>
+        <p>
+          Desarrollo e integro soluciones de IA (LLMs, visión artificial, automatización) e IoT industrial para Industria 4.0:
+          sensores, edge computing, analítica y seguridad.
+        </p>
+        <p>
+          Contacto: <a href="tel:+34644369266">+34 644 36 92 66</a> ·
+          <a href="https://www.xavierberga.com/">xavierberga.com</a>
+        </p>
+        <nav>
+          <ul>
+            <li>IA para empresas en Zaragoza, Barcelona y Lleida</li>
+            <li>IoT industrial: sensores, gateways, edge y cloud</li>
+            <li>Seguridad IoT y arquitectura escalable</li>
+          </ul>
+        </nav>
+      </header>
+    </noscript>
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
